# vibe-cocktails-api

./: .env  .gitignore  alembic.ini  main.py  pyproject.toml
agents/: prompts.py  remix_agent.py  search_agent.py
agents/tools/: cocktail_tools.py  ingredient_tools.py
core/: config.py  db.py  s3.py  vector_store.py
dto/: base.py
lib/: images.py  search.py
migrations/: env.py
migrations/versions/: 73ec389cae2f_initial_schema.py  86afc37b8d35_.py  8e4e8cf251d5_cocktail_embeddings.py  e669ff1ad55c_recipes.py
models/: __init__.py  cocktail.py  ingredient.py  recipe.py
repo/: base.py  cocktails.py  ingredients.py
routes/: ai.py  cocktails.py  ingredients.py  recipes.py
seed/: basic.py  embeddings.py
tasks/: embeddings.py  images.py
